# symspell

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README copy.md  README.md  install  pyproject.toml  setup.py
.github/workflows/: symspell-rust.yml
src/: composition.rs  lib.rs  symspell_rs.rs  symspell_rust.rs
src/symspell_rs/: __init__.py
src/symspell_rust/: __init__.py  __init__.pyi
symspell_rust/: __init__.py  __init__.pyi
tests/: test_symspell.py  test_symspell_rust.py
