[package]
name = "symspell_rust"
version = "0.2.0"
license = "MIT"
authors = ["zoho-labs"]
keywords = ["spellcheck, symspell, rust, python, pyo3"]
description = "Fast and Accurate Spelling correction"
homepage = "https://github.com/zoho-labs/symspell"
repository = "https://github.com/zoho-labs/symspell"
exclude = [
    "data/*","examples/*","Cargo.lock",
]

[profile.release]
overflow-checks = true

[profile.dev]
opt-level = 3

[lib]
name = "symspell_rust" 
crate-type = ["cdylib"]

[dependencies]  
symspell = "0.4.3"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]
